[gd_scene load_steps=6 format=3 uid="uid://dpe24lml0sq6u"]

[ext_resource type="Script" path="res://city_map.gd" id="1_ggjlf"]
[ext_resource type="Texture2D" uid="uid://bsoqiy57ir8gt" path="res://img/mapa/Sebo.png" id="2_y052a"]
[ext_resource type="Texture2D" uid="uid://cmpwlw1wp6xh5" path="res://img/mapa/Sebo-detalhe.png" id="3_a3jug"]
[ext_resource type="Texture2D" uid="uid://e26y88l8l4fg" path="res://img/mapa/Praca-detalhe.png" id="4_s6i5e"]
[ext_resource type="Texture2D" uid="uid://13khtasroik1" path="res://img/mapa/Balneario-detalhe.png" id="5_utrdu"]

[node name="CityMap" type="CanvasLayer"]
script = ExtResource("1_ggjlf")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -2.0
offset_top = 2.0
offset_right = 1278.0
offset_bottom = 722.0
texture = ExtResource("2_y052a")

[node name="TouchSeboButton" type="TouchScreenButton" parent="."]
position = Vector2(609, 38)
texture_normal = ExtResource("3_a3jug")

[node name="TouchPracaButton" type="TouchScreenButton" parent="."]
position = Vector2(418, 213)
texture_normal = ExtResource("4_s6i5e")

[node name="TouchBalnearioButton" type="TouchScreenButton" parent="."]
position = Vector2(596, 352)
texture_normal = ExtResource("5_utrdu")

[connection signal="pressed" from="TouchSeboButton" to="." method="_on_touch_sebo_button_pressed"]
[connection signal="pressed" from="TouchPracaButton" to="." method="_on_touch_praca_button_pressed"]
[connection signal="pressed" from="TouchBalnearioButton" to="." method="_on_touch_balneario_button_pressed"]
